tests/baselines/reference/invalidForContinueStatements.errors.txt
==== tests/cases/compiler/invalidForContinueStatements.ts (6 errors) ====
    // All errors
    
    // naked continue not allowed
    continue;
    ~~~~~~~~~
!!! error TS2201: 'continue' statement can only be used within an enclosing iteration statement.
    
    // non-existent label
    ONE:
    for(;;) continue TWO;
            ~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
    
    // continue from inside function
    TWO:
    for(;;) {
        var x = () => {
            continue TWO;
            ~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }
    
    THREE:
    for(;;) {
        var fn = function () {
            continue THREE;
            ~~~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }
    
    // continue forward
    for(;;) {
        continue FIVE;
        ~~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
        FIVE:
        for (; ;) { }
    }
    // label on non-loop statement
    NINE:
    var y = 12;
    
    for(;;) {
        continue NINE;
        ~~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
    }